--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,7 @@
+[build]
+  command = "npm run build"
+  publish = "build"
+
 [build.environment]
-CI = "false"
+  CI = "false"
+  NODE_OPTIONS = "--openssl-legacy-provider"
